--- a/4_CSS/05_텍스트관련스타일.html
+++ b/4_CSS/05_텍스트관련스타일.html
@@ -39,7 +39,7 @@
 
     <pre>
         선택자{
-            color : 색상명 | #16진수(코드값) |rgb(x,x,x) | rgba(x,x,x,x)
+            color : 색상명 | #16진수(코드값) | rgb(x,x,x) | rgba(x,x,x,x)
         }
     </pre>
 
@@ -65,6 +65,8 @@
     </ul>
 
     <a href="https://www.naver.com" target="_blank" style="text-decoration: none;">네이버로</a>
+    <!--text-decoration은 꼭 필요한 태그에 직접 표시해줘야한다.-->
+    <!--div나 ul에 써준다고 해서 a태그에 적용되지 않는다.-->
 
 
     <hr>
@@ -72,62 +74,52 @@
     <h3>text-align : 텍스트 정렬할 때 사용</h3>
     <pre>
         선택자{
-            text-align : left(기본값) | right | center | justify
+            text-align : left(기본값) | right | center | justify<!--justify : 양쪽정렬-->
         }
     </pre>
 
     <h4>왼쪽정렬(기본값)</h4>
     <p style="text-align: left;">
-        [한국물가협회]
+        [한국물가협회]<br>
         한국물가협회는 전국 17개 시도 전통시장에서 28개 차례 용품 품목별 가격을 조사한 결과, 추석 차례상(4인 기준) 비용은 28만7100원으로 지난해 추석보다 9.1% 늘었다고 26일 밝혔다. 이는
-        10년 전 추석 차례상 비용(19만8610원)과 비교하면 44.6% 높
-
-
-
+        10년 전 추석 차례상 비용(19만8610원)과 비교하면
     </p>
 
 
-    <p style="text-align: justify;"> [한국물가협회]
+    <p style="text-align: justify;">
+        [한국물가협회]<br>
         한국물가협회는 전국 17개 시도 전통시장에서 28개 차례 용품 품목별 가격을 조사한 결과, 추석 차례상(4인 기준) 비용은 28만7100원으로 지난해 추석보다 9.1% 늘었다고 26일 밝혔다. 이는
-        10년 전 추석 차례상 비용(19만8610원)과 비교하면 44.6% 높
-
-
-
+        10년 전 추석 차례상 비용(19만8610원)과 비교하면
     </p>
 
     <p style="text-align: center;">
-        [한국물가협회]
+        [한국물가협회]<br>
         한국물가협회는 전국 17개 시도 전통시장에서 28개 차례 용품 품목별 가격을 조사한 결과, 추석 차례상(4인 기준) 비용은 28만7100원으로 지난해 추석보다 9.1% 늘었다고 26일 밝혔다. 이는
-        10년 전 추석 차례상 비용(19만8610원)과 비교하면 44.6% 높
-
-
-
+        10년 전 추석 차례상 비용(19만8610원)과 비교하면
     </p>
 
     <p style="text-align: right;">
-        [한국물가협회]
+        [한국물가협회]<br>
         한국물가협회는 전국 17개 시도 전통시장에서 28개 차례 용품 품목별 가격을 조사한 결과, 추석 차례상(4인 기준) 비용은 28만7100원으로 지난해 추석보다 9.1% 늘었다고 26일 밝혔다. 이는
-        10년 전 추석 차례상 비용(19만8610원)과 비교하면 44.6% 높
-
-
-
+        10년 전 추석 차례상 비용(19만8610원)과 비교하면 44.6%
     </p>
-
+    <br>
     <hr>
 
     <h3>line-height : 줄 간격 조절할 때 사용</h3>
     <pre>
             선택자{
                 line-height : normal 
-                | px |em |%
+                | px | em | %
             }
         </pre>
 
     <h4>px고정단위 간격</h4>
 
-    <p style="line-height: 30px;">[한국물가협회]
-        한국물가협회는 전국 17개 시도 전통시장에서 28개 차례 용품 품목별 가격을 조사한 결과, 추석 차례상(4인 기준) 비용은 28만7100원으로 지난해 추석보다 9.1% 늘었다고 26일 </p>
-
+    <p style="line-height: 50px;">
+        [한국물가협회]<br>
+        한국물가협회는 전국 17개 시도 전통시장에서 28개 차례 용품 품목별 가격을 조사한 결과, 추석 차례상(4인 기준) 비용은 28만7100원으로 지난해 추석보다 9.1% 늘었다고 26일 밝혔다. 이는
+        10년 전 추석 차례상 비용(19만8610원)과 비교하면 44.6%
 
 
 
