--- a/3_HTML/06_하이퍼링크관련태그.html
+++ b/3_HTML/06_하이퍼링크관련태그.html
@@ -4,35 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>하이퍼링크관련태그</title>
+    <title>하이퍼링크 관련태그</title>
 </head>
 
 <body>
 
     <!--
     하이퍼링크 기능은 웹문서의 가장 핵심적인 기능
-    클릭을 통해 연결된 곳으로 이동하여 사용을 편리하게 해주는 기능
-    텍스트를 클릭해 링크를 이동하는 방법
-    이미지를 클릭해 넘어가는 방법 등 존재....
-    페이지 내에서 링크를 통한 이동도 있다.
+    "클릭"을 통해 연결된 곳으로 이동하여 사용을 편리하게 해주는 기능
+    * 텍스트를 클릭해 링크를 이동하는 방법
+    * 이미지를 클릭해 넘어가는 방법 등 존재....
+    * 페이지 내에서 링크를 통한 이동도 있다.
     -->
 
-    <h1> 하이퍼링크 관련 태그</h1>
-    <!--a태그의 href속성으로 링크를 만들 수 있다. -->
+    <h1>하이퍼링크 관련태그</h1>
+    <!-- a태그의 href속성으로 링크를 만들 수 있다. -->
     <ul>
         <li><a href="01_글자관련태그.html">글자관련태그</a></li>
-        <li><a href="02_목록관련태그.html">글자관련태그</a></li>
+        <li><a href="02_목록관련태그.html">목록관련태그</a></li>
         <li><a href="https://www.naver.com">네이버로</a></li>
     </ul>
 
-    <h3>target 속성 : 연결된 페이지를 어느 택에서 열것인지 지정(_self(기본값), _blank(새페이지에서 열게됨))</h3>
-    <a href="https://www.naver.com" target="_blank">네이버로</a>
+    <h3>target 속성 : 연결된 페이지를 어느 탭에서 열것인지 지정<br>
+        (_self(기본값), _blank(새페이지에서 열게됨))</h3>
+    <a href="https://www.naver.com" target="_blank"><button>네이버로</button></a>
 
 
     <h3>img 태그 이용해서 링크 만들기</h3>
-    <a href="https://www.naver.com" target="_self">
-        <img src="./img/bb.jpg" alt="">
-    </a>
+    <a href="https://www.naver.com" target="_self"><img src="./img/bb.jpg" alt=""></a>
 
     <hr>
     <h3 id="main"> 한페이지 내에서 아이디 속성은 1개만 존재한다. -> 식별자로 사용된다.</h3>
@@ -45,10 +44,7 @@
         한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
         한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
         한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
-
-    </p>
-    <h4>본문내용</h4>
-    <p> 한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
         한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
         한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
         한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
@@ -65,6 +61,14 @@
         한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
         한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
         한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
 
     </p>
     <h4>본문내용</h4>
@@ -75,7 +79,52 @@
         한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
         한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
         한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+    </p>
 
+    <h4>본문내용</h4>
+    <p> 한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+    </p>
+    <h4>본문내용</h4>
+    <p> 한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
+        한페이지 내에서 아이디 속성은 1개만 존재한다.-> 식별자로 사용된다.
     </p>
     <br><br>
     <a href="#main">메인으로 가기</a>
