--- a/4_CSS/화면구조잡기/01_영역관련속성.html
+++ b/4_CSS/화면구조잡기/01_영역관련속성.html
@@ -10,11 +10,16 @@
             box-sizing: border-box;
         }
 
+        /*항상 해주기!!*/
+
         .test {
             border: 1px solid black;
+
             width: 350px;
             height: 150px;
+
             padding: 10px;
+
             margin: 30px;
         }
 
@@ -31,29 +36,26 @@
         }
 
         .test1 {
-            height: 60;
-
+            height: 60%;
         }
 
         .test2 {
-            height: 40;
-
+            height: 40%;
         }
 
         .test3,
         .test4 {
             border: 5px solid blue;
-            width: 100%;
-            display: inline-block;
+            height: 100%;
             float: left;
         }
 
         .test3 {
-            width: 40;
+            width: 40%;
         }
 
         .test4 {
-            width: 60;
+            width: 60%;
         }
     </style>
 </head>
@@ -61,23 +63,24 @@
 <body>
     <h1>영역관련속성</h1>
     <div class="test">
-        1) content : 요소내의 내용을 작성하는 영역<br>
-        2) border : 요소내의 테두리 영역<br>
-        3) padding : content와 border사이의 여백<br>
-        4) margin : 요소의 바깥쪽 영역
+        1) content : 요소 내의 내용을 작성하는 영역 <br>
+        2) border : 요소 내의 테두리 영역 <br>
+        3) padding : content와 border사이의 여백 <br>
+        4) margin : 요소의 바깥쪽영역
     </div>
 
     <h2>div안에 또다른 여러개의 div를 넣는 연습</h2>
 
-    <h3>상하 2등분하기
-    </h3>
+    <h3>상하 2등분하기</h3>
     <div class="wrap">
-        <div></div>
+        <div class="test1"></div>
+        <div class="test2"></div>
     </div>
 
     <h3>좌우 2등분하기</h3>
     <div class="wrap">
-        <div></div>
+        <div class="test3"></div>
+        <div class="test4"></div>
     </div>
 </body>
 
