--- a/5_JavaScript/02_데이터입출력.html
+++ b/5_JavaScript/02_데이터입출력.html
@@ -11,7 +11,7 @@
     <h1>자바스크립트에서 데이터 입/출력</h1>
     <!--
     * window : 자바스크립트의 내장 객체로 브라우저 창이 열릴 때마다 하나씩 만들어지는 객체
-                브라우저 창 안에 모든 요소들의 최상위 객체
+                브라우저 창 안에 모든 요소들의 최상위 객체(Object같은 존재)
     * document : 웹 문서마다 하나씩 만들어지는 객체(html 문서에 대한 정보를 가지고 있음 -> DOM 관리)
     -->
 
