--- a/3_HTML/03_표관련태그.html
+++ b/3_HTML/03_표관련태그.html
@@ -52,7 +52,7 @@
 
     </table>
     <h1>기본적인 표 만들기</h1>
-    <table border="5"><!--border 속성 : 표에 테두리 두께-->
+    <table border="1"><!--border 속성 : 표에 테두리 두께-->
         <caption><b>휴대폰의 종류</b></caption>
         <tr>
             <th>모델명</th>
@@ -88,7 +88,7 @@
     -->
 
     <h3>이력서</h3>
-    <table border="9">
+    <table border="1">
         <tr>
             <td width="130" height="130" rowspan="2" colspan="2">사진</td>
             <td width="80">이름</td>
@@ -121,26 +121,28 @@
                 <th>나이</th>
                 <th>주소</th>
             </tr>
+
         </thead>
         <tbody>
             <tr>
                 <td>최지원</td>
                 <td>51</td>
-                <td>경기도 군포시 xxxx</td>
+                <td>경기도 군포시 xxxxxxxxx</td>
             </tr>
             <tr>
                 <td>박지수</td>
                 <td>37</td>
-                <td>경기도 하남시 xxxx</td>
+                <td>경기도 하남시 xxxxxxx@@xx</td>
             </tr>
+
         </tbody>
         <tfoot>
-            <tr>
-                <th>총인원</th>
-                <td colspan="2">2명</td>
-            </tr>
+            <th>총인원</th>
+            <td colspan="2">2명</td>
+
         </tfoot>
     </table>
+
 </body>
 
 </html>
