--- a/4_CSS/01_기본선택자.html
+++ b/4_CSS/01_기본선택자.html
@@ -8,12 +8,12 @@
     <style>
         /*css영역(스타일을 기술할 수 있는 영역)*/
         * {
-            color: green;
+            color: red;
             /*글씨색상*/
         }
 
         h3 {
-            background: pink;
+            background: yellow;
             /*배경색*/
 
         }
@@ -41,7 +41,7 @@
             background: beige;
         }
     </style>
-    <!--내부스타일 방식 : 현재 이 문서에서 적용시키고자하는 스타일 정보들을 <style>태그 내에 기입하는 방식
+    <!--내부스타일 방식 : 현재 이 문서에서 적용시키고자하는 스타일 정보들을 <style>태그내에 기입하는 방식
         이 html문서 내에 스타일 정보를 같이 기술하는 방식-->
 </head>
 
@@ -52,9 +52,8 @@
     <h3>선택자란? </h3>
     <p>
         특정 html요소를 선택하고자 할 때 사용하는 기능<br>
-        해당 요소를 선택해서 원하는 "스타일"과 "기능" 을 적용시킬 수 있다.
+        해당 요소를 선택해서 원하는 " 스타일"과 "기능" 을 적용시킬 수 있다.
     </p>
-
     <h3>1. 모든(전체) 선택자 : *</h3>
     <p>현재 이 문서상에 모든 요소들을 다 선택하고자 할 때 사용</p>
     <pre>
@@ -73,13 +72,13 @@
                 스타일속성 : 값
                 ...
             }
-    </pre>
+        </pre>
 
     <hr>
     <h3>3. 아이디 선택자 : #아이디</h3>
     <p>
-        현재 이 문서상에 특정 html요소 "하나"만을 선택하고자 할 때 사용<br>
-        단, 해당 요소에서 id속성을 이용해서 고유한 아이디를 부여해야함(식별자)
+        현재 이 문서상에 특정 html요소 "하나"만을 선택하고자 할 때 사용
+        단, 해당 용소에서 id속성을 이용해서 고유한 아이디를 부여해야함
 
 
     </p>
@@ -90,15 +89,13 @@
         <li id>아이디선택자</li>
         <li id>아이디선택자</li>
     </ol>
-
     <hr>
-
-    <h3>4. 클래스 선택자 - .클래스명</h3>
-    <p class="cl1">해당 문서 내에 내가 원하는 요소 "여러개"를 선택하고자 할 때 사용</p>
+    <h3>4. 클래스 선택자 : .클래스명</h3>
+    <p class="cl1">해당 이 문서내에 내가 원하는 요소"여러개"를 선택하고자 할 때 사용</p>
     <ul>
         <li class="cl1">클래스1</li>
         <li class="cl2">클래스2</li>
-        <li class="cl1 cl2 cl3">클래스3</li>
+        <li class="cl1 cl2">클래스3</li>
         <li>클래스4</li>
         <li class="cl1">클래스5</li>
     </ul>
