--- a/4_CSS/03_선택자우선순위.html
+++ b/4_CSS/03_선택자우선순위.html
@@ -8,20 +8,20 @@
 
     <style>
         h1 {
-            background: pink;
+            background-color: pink;
         }
 
         h1 {
-            background: red;
+            background-color: red;
         }
 
         #id1 {
-            background: rgb(131, 22, 40);
+            background-color: pink;
         }
 
         .class1 {
             background-color: yellowgreen;
-            color: rgb(231, 238, 236);
+            color: aqua;
         }
 
         /*id가 더 우선순위가 높아서 적용안됨*/
@@ -32,8 +32,8 @@
 
         /*class가 더 우선순위가 높아서 적용안됨*/
         div {
-            background-color: rgb(57, 15, 155) !important;
-            color: rgb(138, 97, 97);
+            background-color: aqua !important;
+            color: blue;
         }
     </style>
 </head>
@@ -41,12 +41,14 @@
 <body>
     <h1>선택자 우선순위</h1>
     <p>
-        기본적으로 css는 위에서부터 아래로 적용됨 <br>
-        동일한 요소를 다양한 선택자로 css를 부여한 경우 우선순위에 따라서 결정됨
-        태그선택자 -> 클래스선택자 -> 아이디선택자 -> 인라인스타일방식 -> !important
+        기본적으로 css는 위에서부터 아래로 적용됨<br>
+        동일한 요소를 다양한 선택자로 css를 부여한 경우 우선순위에 따라
+        태그 선택자 -> 클래스선택자 -> 아이디선택자 -> 인라인스타일방식 -> !important
+
     </p>
 
-    <div id="id1" class="class1"> 우선순위 테스트 </div>
+    <div id="id1" class="class1">우선순위 테스트</div>
+
 </body>
 
 </html>
