--- a/4_CSS/07_레이아웃관련스타일2.html
+++ b/4_CSS/07_레이아웃관련스타일2.html
@@ -15,7 +15,6 @@
             position: relative;
             /*기준*/
             border: 1px solid black;
-            width: 400px;
         }
 
         #first {
@@ -32,7 +31,7 @@
             /*내가 원하는 위치에 두기*/
             left: 50px;
             top: 50px;
-            /* position: relative;로 세팅된 부모요소로부터 위쪽에서 50px 왼쪽에서 50px만큼 떨어진 위치에 자리한다*/
+            /* position : relative;로 세팅된 부모요소로부터 위쪽에서 50px 왼쪽에서  50px만큼 떨어진 위치에 자리한다.*/
         }
 
         #third {
@@ -42,15 +41,17 @@
             position: absolute;
             top: 100px;
             left: 100px;
+
         }
 
         #fixed-area {
             width: 100px;
             height: 100px;
-            background: blue;
+            background-color: blue;
             position: fixed;
             right: 20px;
             bottom: 20px;
+
         }
 
         .vis-test {
@@ -63,6 +64,8 @@
             width: 70px;
             height: 30px;
             float: left;
+            margin: auto;
+
         }
     </style>
 </head>
@@ -70,7 +73,7 @@
 <body>
 
     <h1>배치관련 스타일</h1>
-    <h3>position: 상대위치(relative)와 절대위치(absolute)</h3>
+    <h3>position :상대위치(relative)와 절대위치(absolute)</h3>
 
     <div class="outer">
         <div class="positioning" id="first">첫번째 자식</div>
@@ -80,39 +83,37 @@
 
     <hr>
 
-    <h3>position: 고정위치(fixed)</h3>
-    <div class="positioning" id="fixed-area"></div>
+    <h3>position : 고정위치(fixed)</h3>
+
+    <div class="positioning" id="fixed-area"> </div>
 
     <hr>
-    <h3>visivility: 특정요소를 보이거나 보이지 않게하는 스타일 속성</h3>
-    <div class="vis-test" style="background: red; opacity: 50%;">첫번째 영역</div>
-    <div class="vis-test" style="background: green; visibility: hidden;">두번째 영역</div>
-    <div class="vis-test" style="background: yellow; display: none;">세번째 영역</div>
+    <h3>visivility :특정요소를 보이거나 보이지 않게 하는 스타일 속성</h3>
+    <div class="vis-test" style="background: red; opacity: 50%;">첫번쨰 영역</div>
+    <div class="vis-test" style="background: green; visibility: hidden;">두번쨰 영역</div>
+    <div class="vis-test" style="background: yellow; display: none;">세번쨰 영역</div>
+    <div class="vis-test" style="background: yellow; display: none;">세번쨰 영역</div>
 
     <hr>
 
     <h3>float</h3>
-    <p>페이지 내의 요소들을 띄워서 화면으로부터 왼쪽 또는 오른쪽으로 배치하는 속성. 즉 태그들의 정렬이다.<br>
-        묶음태그(블록요소)에만 적용가능하다.(div, p, ol, ul, table, img 등)
-    </p>
-
-    <p>
-        * none : 기본값. 정렬하지 않는다.<br>
-        * left : 왼쪽정렬<br>
-        * right : 오른쪽 정렬<br>
-    </p>
-    <br>
-
+    <p>페이지 내의 요소들을 띄워서 화면으로부터 왼쪽 또는 오른쪽으로 배치하는 속성</p>
     <div class="float-test">요소1</div>
     <div class="float-test">요소2</div>
     <div class="float-test">요소3</div>
     <div class="float-test">요소4</div>
     <div class="float-test">요소5</div>
-
     <br clear="both">
+
     <hr>
 
+
     <br><br><br><br>
+
+
+
+
+
 </body>
 
 </html>
