--- a/4_CSS/08_flex레이아웃.html
+++ b/4_CSS/08_flex레이아웃.html
@@ -7,13 +7,11 @@
     <title>Flex</title>
     <style>
         .container {
-            border: 5px solid black;
+            border: 3px solid black;
             display: flex;
-            /*flex기능을 쓰려면 부모요소에 display :felx;가 설정되어 있어야한다.*/
             flex-direction: row;
-            /*flex-direction을 설정하지 않으면 기본은 row정렬이다.*/
-            /* flex-direction :column(수직) | column-reverse | row(수평) | row-reverse | inherit(부모의 설정대로)*/
-            /* 자식요소들을 정렬할 때 어떤 축을 기준으로 할 것인가? */
+            /*flex-direction : column(수직정렬) | column-reverse | row(수평) | row-reverse*/
+            /*자식요소들을 정렬할 때 어떤 축을 기준으로 할 것인가?*/
         }
 
         .flex-item {
@@ -21,46 +19,49 @@
             font-size: 50px;
             padding: 24px;
             text-align: center;
-            border: 10px solid rgb(13, 155, 221);
+            border: 1px solid red;
             width: 100px;
             flex: 1;
-            /*화면 비율에 따라 유연하게 늘어나거나 줄어들 수 있음을 만드는 속성이다.*/
+
         }
 
         .item1 {
-            background: yellow;
+            background-color: yellow;
+
         }
 
         .item2 {
-            background: red;
+            background-color: red;
         }
 
         .item3 {
-            background: green;
+            background-color: green;
         }
 
         .item4 {
-            background: rgb(44, 168, 121);
+            background-color: rgb(0, 38, 255);
+
         }
 
         .item5 {
-            background: rgb(124, 23, 119);
+            background-color: rgb(255, 0, 179);
         }
 
         .item6 {
-            background: rgb(89, 49, 182);
+            background-color: rgb(0, 119, 128);
         }
 
         .container2 {
-            border: 3px solid black;
+            border: 3px;
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             flex-wrap: wrap;
-            /* 요소들의 총 넓이가 부모넓이보다 클 때, 이 요소들의 주축의 정렬을 어떻게 할것인가 */
-            /*nowrap(부모넓이에 맞게 모두 자동 축소) | wrap(부모요소 가로크기에 맞춰 순서대로 원래크기 그대로 가로 정렬) | wrap-reverse*/
-            justify-content: flex-start;
-            /* 교차축의 정렬을 어떻게 할것인가 */
+            /*주축의 정렬을 어떻게 할 것인가?*/
+            justify-content: space-between;
+
+            /*교차축의 정렬을 어떻게 할 것인가?*/
             align-items: center;
+
         }
 
         .flex-item2 {
@@ -70,33 +71,32 @@
             text-align: center;
             border: 1px solid black;
             width: 100px;
-            /*요소 하나의 너비*/
+
         }
     </style>
 </head>
+<h1>Flex레이아웃</h1>
+<p>웹페이지 레이아웃을 효율적으로 구성하기 위한 기술, flexbox를 사용하면 요소들을 부모컨테이너에서 유연하게 정렬하고 배치할 수 있다.</p>
+
+<div class="container">
+    <div class="flex-item item1">1번</div>
+    <div class="flex-item item2">2번</div>
+    <div class="flex-item item3">3번</div>
+</div>
+
+
+<br><br><br>
+<div class="container2">
+    <div class="flex-item2 item1">1번</div>
+    <div class="flex-item2 item2">2번</div>
+    <div class="flex-item2 item3">3번</div>
+    <div class="flex-item2 item4">4번</div>
+    <div class="flex-item2 item5">5번</div>
+    <div class="flex-item2 item6">6번</div>
+</div>
 
 <body>
-    <h1>Flex레이아웃</h1>
-    <p>웹페이지 레이아웃을 효율적으로 구성하기위한 기술<br>
-        flexbox를 사용하면 요소들을 부모컨테이너에서 유연하게 정렬하고 배치할 수 있다.
-    </p>
 
-    <div class="container">
-        <div class="flex-item item1">1번</div>
-        <div class="flex-item item2">2번</div>
-        <div class="flex-item item3">3반</div>
-    </div>
-
-    <br><br><br>
-
-    <div class="container2">
-        <div class="flex-item2 item1">1번</div>
-        <div class="flex-item2 item2">2번</div>
-        <div class="flex-item2 item3">3반</div>
-        <div class="flex-item2 item4">4번</div>
-        <div class="flex-item2 item5">5번</div>
-        <div class="flex-item2 item6">6반</div>
-    </div>
 </body>
 
 </html>
