--- a/3_HTML/03_표관련태그.html
+++ b/3_HTML/03_표관련태그.html
@@ -19,7 +19,7 @@
             <th></th> : 표의 제목셀을 나타내는 태그 -> 글자 굵게, 가운데 정렬
             <td></td> : 표의 일반셀을 나타내는 태그
     -->
-    <table>
+    <table border="1">
         <tr>
             <th></th>
             <th></th>
@@ -39,13 +39,13 @@
         </tr>
 
         <tr>
-            <td></td>
+            <td>df</td>
             <td></td>
             <td></td>
         </tr>
 
         <tr>
-            <td></td>
+            <td>df</td>
             <td></td>
             <td></td>
         </tr>
