--- a/3_HTML/04_이미지및멀티미디어태그.html
+++ b/3_HTML/04_이미지및멀티미디어태그.html
@@ -16,7 +16,7 @@
     -->
 
     <h3> src 속성 </h3>
-    <img src="./img/bb.jpg" alt=" 옥지와 빵빵이 투샷">
+    <img src="./img/제니.jpg" alt=" 옥지와 빵빵이 투샷">
 
     <h3>alt 속성</h3>
 
@@ -29,17 +29,17 @@
 
     <h4>고정길이단위(px) : 화면사이즈가 변경되도 이미지크기는 변경되지 않는다.</h4>
     <!--사진 height는 안적어줄때가 많다. 사진 비율이 자동으로 width에 맞게 height가 지정된다. -->
-    <img src="./img/bb.jpg" width="200px" height="150px">
-    <img src="./img/bb.jpg" width="200px" height="100px">
-    <img src="./img/bb.jpg" width="100px" height="150px">
-    <img src="./img/bb.jpg" width="100px" height="100px">
+    <img src="./img/제니.jpg" width="200px" height="150px">
+    <img src="./img/제니.jpg" width="200px" height="100px">
+    <img src="./img/제니.jpg" width="100px" height="150px">
+    <img src="./img/제니.jpg" width="100px" height="100px">
 
     <h4>가변길이단위(%) : 화면사이즈 또는 부모요소 사이즈에 따라 이미지 크기도 변경</h4>
 
-    <img src="./img/bb.jpg" width="100%" height="150px">
-    <img src="./img/bb.jpg" width="15%" height="150px">
-    <img src="./img/bb.jpg" width="20%" height="150px">
-    <img src="./img/bb.jpg" width="25%" height="150px">
+    <img src="./img/제니.jpg" width="100%">
+    <img src="./img/제니.jpg" width="15%">
+    <img src="./img/제니.jpg" width="20%">
+    <img src="./img/제니.jpg" width="25%" >
 
 
 
@@ -65,7 +65,7 @@
     <!--
 <video src = "" controls autoplay loop width="" height ="" poster ="썸네일 경로"></video>
 -->
-    <video src="" controls autoplay loop width="300" height="200" poster="./img/bb.jpg"></video>
+    <video src="" controls autoplay loop width="300"  poster="./img/제니.jpg"></video>
 
 
 
