--- a/5_JavaScript/practice/practice1.html
+++ b/5_JavaScript/practice/practice1.html
@@ -1,66 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
 
-    <style>
-      div {
-        border: 1px solid black;
-        background: black;
-        height: 100px;
-        width: 100px;
-      }
-    </style>
-  </head>
-  <body>
-    <h3>문제1. 색상 선택후 변경 버튼을 클릭하면 색상이 변경되도록 만들어라</h3>
-    <div id="div1"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
 
-    <input type="color" id="selectColor" />
-    <button onclick="colorChange()">변경</button>
+  <style>
+    div {
+      border: 1px solid black;
+      background: black;
+      height: 100px;
+      width: 100px;
+    }
+  </style>
+</head>
 
-    <script>
-      function colorChange() {
-        const color = document.querySelector("#selectColor");
-        console.log(color.value);
+<body>
+  <h3>문제1. 색상 선택후 변경 버튼을 클릭하면 색상이 변경되도록 만들어라</h3>
+  <div id="div1"></div>
 
-        const divEl = document.getElementById("div1");
-        divEl.style.background = color.value;
-      }
-    </script>
+  <input type="color" id="selectColor" />
+  <button onclick="colorChange()">변경</button>
 
-    <h3>문제2. 버튼에 따른 크기조절이 가능하게 만들어 보세요.</h3>
-    <div id="div2"></div>
-    <button onclick="reSize('#div2', '50px', '50px')">50X50</button>
-    <button onclick="reSize('#div2', '100px', '100px')">100X100</button>
-    <button onclick="reSize('#div2', '200px', '200px')">200X200</button>
+  <script>
+    function colorChange() {
+      const color = document.querySelector("#selectColor");
+      // 컬러 선택기 요소 선택
+      //#selectColor라는 ID를 가진 요소(컬러 선택기)를 선택.
+      //이 컬러 선택기의 value 속성에 사용자가 선택한 색상 값이 저장됨.  
+      console.log(color.value); // 사용자가 선택한 색상의 값 출력
 
-    <script>
-      function halfSize() {
-        const divEl = document.querySelector("#div2");
-        divEl.style.width = "50px";
-        divEl.style.height = "50px";
-      }
+      const divEl = document.getElementById("div1");
+      // div1 ID를 가진 <div> 요소를 선택.
+      divEl.style.background = color.value;
+      // <div>의 style 객체에서 background 속성을 수정.
+      // 사용자가 선택한 색상 값으로 배경색을 변경.
+       
+    divEl.textContent = `선택한 색상: ${color.value}`;// 선택한 색상을 텍스트로 표시(div안에 표시된다)
+    }
 
-      function defaultSize() {
-        const divEl = document.querySelector("#div2");
-        divEl.style.width = "100px";
-        divEl.style.height = "100px";
-      }
+  </script>
 
-      function doubleSize() {
-        const divEl = document.querySelector("#div2");
-        divEl.style.width = "200px";
-        divEl.style.height = "200px";
-      }
+  <h3>문제2. 버튼에 따른 크기조절이 가능하게 만들어 보세요.</h3>
+  <div id="div2"></div>
+  <button onclick="reSize('#div2', '50px', '50px'); changeColor('#div2', 'BLUE')">50X50</button>
+  <button onclick="reSize('#div2', '100px', '100px')">100X100</button>
+  <button onclick="reSize('#div2', '200px', '200px')">200X200</button>
 
-      function reSize(selector, width, height) {
-        const divEl = document.querySelector(selector);
-        divEl.style.width = width;
-        divEl.style.height = height;
-      }
-    </script>
-  </body>
+  <script>
+    /* 하드코딩
+    function halfSize() {
+      const divEl = document.querySelector("#div2");
+      divEl.style.width = "50px";
+      divEl.style.height = "50px";
+    }
+
+    function defaultSize() {
+      const divEl = document.querySelector("#div2");
+      divEl.style.width = "100px";
+      divEl.style.height = "100px";
+    }
+
+    function doubleSize() {
+      const divEl = document.querySelector("#div2");
+      divEl.style.width = "200px";
+      divEl.style.height = "200px";
+    }
+*/ 
+
+//유연한 코딩
+    function reSize(selector, width, height) {
+      const divEl = document.querySelector(selector);
+      divEl.style.width = width;
+      divEl.style.height = height;
+    }
+
+    function changeColor(selector, color) {
+      const divEl = document.querySelector(selector);
+      divEl.style.backgroundColor = color;
+  }
+  </script>
+</body>
+
 </html>
